--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .App {
-  text-align: center;
 }
 
 .App-logo {
@@ -13,16 +12,28 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.square {
+  border: 1px solid gray;
+  margin: 5px;
+  padding: 5px;
 }
+
+.completed-square {
+  border: 1px solid lightgreen;
+}
+
+
+
+/* .App-header { */
+/*   background-color: #282c34; */
+/*   min-height: 100vh; */
+/*   display: flex; */
+/*   flex-direction: column; */
+/*   align-items: center; */
+/*   justify-content: center; */
+/*   font-size: calc(10px + 2vmin); */
+/*   color: white; */
+/* } */
 
 .App-link {
   color: #61dafb;
