--- a/src/App.css
+++ b/src/App.css
@@ -1,49 +1,51 @@
 .App {
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App.dark {
+  background-color: #282c34;
+  color: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.squares-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 98%;
+  margin: auto;
+}
+
+.App-header {
+  background-color: #282c34;
+  display: flex;
+  padding: 10px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
 .square {
+  flex-basis: calc(50% - 22px);
+  max-width: 500px;
+  flex-grow: 1;
+  min-width: 400px;
   border: 1px solid gray;
   margin: 5px;
   padding: 5px;
 }
 
 .completed-square {
-  border: 1px solid lightgreen;
+  color: gray;
 }
 
+.new-task-form {
+  width: 100%;
+}
 
-
-/* .App-header { */
-/*   background-color: #282c34; */
-/*   min-height: 100vh; */
-/*   display: flex; */
-/*   flex-direction: column; */
-/*   align-items: center; */
-/*   justify-content: center; */
-/*   font-size: calc(10px + 2vmin); */
-/*   color: white; */
-/* } */
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
